# lab-integrator-service

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  test-icon.py  win_services.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-binaries.yml  build-installer.yml  ci.yml
app/commons/: hl7_engine.py  hl7_normalizer.py  logger.py  types.py
app/configs/: .env.example  settings.yaml  template_reader_orm_hl7.yaml
app/helpers/: file_transport.py  router.py  tcp_transport.py
app/parsers/: base.py  finecare.py  icon3.py  models.py
app/services/: orders_service.py  results_service.py
app/storages/result_example/: perfect_many_obx.hl7
app/validation/: validators.py
installer/windows/: setup.iss
tests/: test_icon3_engine.py  test_parsers.py
